--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,8 @@
 ---
 layout: default
-css: ["page.css"]
 ---
-<div id="page-info">
-  <h3>{{page.title}}</h3>
-</div>
-<div class="row">
+
+<article class="page">
+  <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
-</div>
+</article>
