--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,6 +10,8 @@
   --gray-800: #343a40;
   --gray-900: #212529;
 
+
+
   --red: #fa5252;
   --pink: #e64980;
   --grape: #be4bdb;
@@ -35,7 +37,7 @@
   --text-font: Times, "Times New Roman", "Free Serif", "Noto Serif", TimesNewRomanPSMT, "Droid Serif";
 
   --link-color: var(--blue);
-  --link-hover-color: #1c7ed6;
+  --link-hover-color: #DF91EC; #changed to purper
 
   --heading-color: var(--gray-900);
 
@@ -53,7 +55,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --body-color: var(--gray-300);
+    --body-color: #F17EC8 ; changed to pink from #var(--gray-300);
     --body-bg: var(--gray-800);
 
     --heading-color: #fff;
