--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
 :root {
-  --gray-000: #F17EC8; #f8f9fa;
+  --gray-000: #F17EC8; //#f8f9fa;
   --gray-100: #f1f3f5;
   --gray-200: #e9ecef;
   --gray-300: #dee2e6;
@@ -37,7 +37,7 @@
   --text-font: Times, "Times New Roman", "Free Serif", "Noto Serif", TimesNewRomanPSMT, "Droid Serif";
 
   --link-color: var(--blue);
-  --link-hover-color: #DF91EC; #changed to purper
+  --link-hover-color: #DF91EC; //#changed to purper
 
   --heading-color: var(--gray-900);
 
