--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -61,7 +61,7 @@
     --heading-color: #F17EC8; // changed to pink #fff;
 
     --link-color: var(--blue-300);
-    --link-hover-color: var(--blue-400);
+    --link-hover-color: #F17EC8; // changed to pink var(--blue-400);
 
     --border-color: rgba(255,255,255,.15);
 
