--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -36,7 +36,7 @@
 
   --text-font: Times, "Times New Roman", "Free Serif", "Noto Serif", TimesNewRomanPSMT, "Droid Serif";
 
-  --link-color: var(--blue);
+  --link-color: #DF91EC; //#changed to purper var(--blue);
   --link-hover-color: #DF91EC; //#changed to purper
 
   --heading-color: var(--gray-900);
