--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -36,8 +36,8 @@
 
   --text-font: Times, "Times New Roman", "Free Serif", "Noto Serif", TimesNewRomanPSMT, "Droid Serif";
 
-  --link-color: #DF91EC; //#changed to purper var(--blue);
-  --link-hover-color: #DF91EC; //#changed to purper
+  --link-color: #935DF5; //#changed to purper var(--blue);
+  --link-hover-color: #935DF5; //#changed to purper
 
   --heading-color: var(--gray-900);
 
