--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -37,7 +37,7 @@
   --text-font: Times, "Times New Roman", "Free Serif", "Noto Serif", TimesNewRomanPSMT, "Droid Serif";
 
   --link-color: #935DF5; //#changed to purper var(--blue);
-  --link-hover-color: #935DF5; //#changed to purper
+  --link-hover-color: #935DF5; //#changed to purper;
 
   --heading-color: var(--gray-900);
 
