--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,7 +6,7 @@
   --gray-400: #ced4da;
   --gray-500: #adb5bd;
   --gray-600: #868e96;
-  --gray-700: #495057;
+  --gray-700: #000000; //#495057;
   --gray-800: #343a40;
   --gray-900: #212529;
 
