--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -39,7 +39,7 @@
 
   --heading-color: var(--gray-900);
 
-  --border-color: var(--gray-000); //var(--gray-300);
+  --border-color: var(--gray-300);
   --border-radius: .25rem;
 
   --code-font: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
