--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -35,7 +35,7 @@
   --text-font: Times, "Times New Roman", "Free Serif", "Noto Serif", TimesNewRomanPSMT, "Droid Serif";
 
   --link-color: #935DF5; //#changed to purper var(--blue);
-  --link-hover-color: #935DF5; //#changed to purper;
+  --link-hover-color: #BE4BDB; //#changed to light purper;
 
   --heading-color: var(--gray-900);
 
