--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,8 +19,10 @@
   --cyan: #15aabf;
   --teal: #12b886;
   --green: #40c057;
-  --yellow: #fab005;
+  --yellow: #BE4BDB;//changed to --lightpurple fab005;
   --orange: #fd7e14;
+
+  --lightpurple: #BE4BDB;
 
   --blue-300: #74c0fc;
   --blue-400: #4dabf7;
