--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,8 @@ layout: default
   {%- endif -%}
 </div>
 
-<div class="pagination">
+
+/* <div class="pagination">
   {% if paginator.next_page %}
     <a class="pagination-item older" href="{{ paginator.next_page_path | relative_url }}">Older</a>
   {% else %}
@@ -42,4 +43,4 @@ layout: default
   {% else %}
     <span class="pagination-item newer">Newer</span>
   {% endif %}
-</div>
+</div>*/
