--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,8 @@ layout: default
 
 {% include home-header.html %}
 
+Let's check what's new /IMG_8181.jpg
+
 <div class="posts">
   {% for post in paginator.posts %}
   <section class="post-entry">
