--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,7 @@ layout: default
 {% include home-header.html %}
 
 Let's check what's new /IMG_8181.jpg
+Find more under "Dates" and "Categories"
 
 <div class="posts">
   {% for post in paginator.posts %}
