--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include home-header.html %}
 
-Let's check what's new /IMG_8181.jpg
+Let's check what's new <img src="{{ '/IMG_8181.jpg' | relative_url }}" width="10px"><br>
 Find more under "Dates" and "Categories"
 
 <div class="posts">
