--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 {% include home-header.html %}
 
 Let's check what's new <img src="{{ '/IMG_8181.jpg' | relative_url }}" width="300px"><br>
-Find more under "Dates" and "Categories"
+Find more under <font color= E675A7> "Dates"</font> and <font color= E675A7> "Categories</font>.
 <br>
 <br>
 
