--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,10 @@ layout: default
 
 {% include home-header.html %}
 
-Let's check what's new <img src="{{ '/IMG_8181.jpg' | relative_url }}" width="30px"><br>
+<img src="{{ '/IMG_8181.jpg' | relative_url }}" width="30px">
+Let's check what's new!
+
 Find more under <font color= E675A7> "Dates"</font> and <font color= E675A7> "Categories</font>.
-<br>
 <br>
 
 <div class="posts">
