--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,8 +7,10 @@ layout: default
 <img src="{{ '/IMG_8181.jpg' | relative_url }}" width="30px">
 Let's check what's new!
 
-Find more under <font color= E675A7> "Dates"</font> and <font color= E675A7> "Categories</font>.
+Also you can find more under <a href="/dates/"><font color= E675A7> "Dates"</font></a>
+ and <a href="/tags/"><font color= E675A7> <font color= E675A7> "Categories"</font></font></a>.
 <br>
+
 
 <div class="posts">
   {% for post in paginator.posts %}
