--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,8 +7,8 @@ layout: default
 <img src="{{ '/IMG_8181.jpg' | relative_url }}" width="45px">
 Let's check what's new!<br>
 
-Also you can find more under <a href="/dates/"><font color= E675A7> "Dates"</font></a>
- and <a href="/tags/"><font color= E675A7> <font color= E675A7> "Categories"</font></font></a>.
+Also you can find more under <a href="/mathnotes/dates/"><font color= E675A7> "Dates"</font></a>
+ and <a href="/mathnotes/tags/"><font color= E675A7> <font color= E675A7> "Categories"</font></font></a>.
 <br><br>
 
 
