--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include home-header.html %}
 
-<img src="{{ '/IMG_8181.jpg' | relative_url }}" width="45px">
+<img src="{{ 'pics/IMG_8181.jpg' | relative_url }}" width="45px">
 Let's check what's new!<br>
 
 Also you can find more under <a href="/mathnotes/dates/"><font color= E675A7> "Dates"</font></a>
