--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -46,7 +46,7 @@
 
   --code-font: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --code-color: var(--grape);
-  --code-bg: #fbf1c7;
+  --code-bg: #F5F5F5; //changed to light gray, was fbf1c7;
 
   --spacer: 1rem;
   --spacer-2: calc(var(--spacer) * 1.5);
