--- a/_sass/_syntax-light.scss
+++ b/_sass/_syntax-light.scss
@@ -10,7 +10,7 @@
 }
 .highlight .err {
   color: #9d0006;
-  background-color: #fbf1c7;
+  background-color: #F5F5F5; //changed to light gray, was fbf1c7;
   font-weight: bold;
 }
 .highlight .c, .highlight .ch, .highlight .cd, .highlight .cm, .highlight .cpf, .highlight .c1, .highlight .cs {
