--- a/_sass/_syntax-light.scss
+++ b/_sass/_syntax-light.scss
@@ -6,7 +6,7 @@
 .highlight table pre { margin: 0; }
 .highlight, .highlight .w {
   color: #282828;
-  background-color: #F5F5F5; //changed to light gray, was fbf1c7;
+  background-color: #fbf1c7;
 }
 .highlight .err {
   color: #9d0006;
