--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,9 +45,9 @@ Also you can find more under <a href="/mathnotes/dates/"><font color= E675A7> "D
   {% else %}
     <span class="pagination-item older">Older</span>
   {% endif %}
-  {% if paginator.previous_page %}
-    <a class="pagination-item newer" href="{{ paginator.previous_page_path | prepend: relative_url }}">Newer</a>
-  {% else %}
-    <span class="pagination-item newer">Newer</span>
-  {% endif %}
+  #{% if paginator.previous_page %}
+  #  <a class="pagination-item newer" href="{{ paginator.previous_page_path | prepend: relative_url }}">Newer</a>
+  #{% else %}
+  #  <span class="pagination-item newer">Newer</span>
+  #{% endif %}
 </div>
