--- a/_sass/_syntax-dark.scss
+++ b/_sass/_syntax-dark.scss
@@ -45,7 +45,7 @@
   color: #fb4934;
 }
 .highlight .kc {
-  color: #d3869b;
+  color: ##e5d9fa;
 }
 .highlight .kt {
   color: #fabd2f;
@@ -75,13 +75,13 @@
   color: #8ec07c;
 }
 .highlight .no {
-  color: #d3869b;
+  color: ##e5d9fa;
 }
 .highlight .na {
   color: #b8bb26;
 }
 .highlight .m, .highlight .mb, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mx {
-  color: #d3869b;
+  color: ##e5d9fa;
 }
 .highlight .ss {
   color: #83a598;
