--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -55,7 +55,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --body-color: #var(--gray-300) ;
+    --body-color: #f1dff7 ; //#var(--gray-300)
     --body-bg: var(--gray-800);
 
     --heading-color: #fff;
