--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -58,10 +58,10 @@
     --body-color: #f1dff7 ; //#var(--gray-300)
     --body-bg: var(--gray-800);
 
-    --heading-color: #fff;
+    --heading-color: #f1dff7; //#fff
 
     --link-color: var(--blue-300);
-    --link-hover-color: var(--blue-400);
+    --link-hover-color: #e9adf7;//var(--blue-400);
 
     --border-color: rgba(255,255,255,.15);
 
