--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,16 @@
 layout: default
 ---
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TG0XJZG53F"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-TG0XJZG53F');
+</script>
+
 {% include home-header.html %}
 
 <img src="{{ '/pics/IMG_8181.jpg' | relative_url }}" width="45px">
